// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge danger 1`] = `
<span
  className="css-f00b3g"
>
  danger
</span>
`;

exports[`Badge default 1`] = `
<span
  className="css-b4fwwt"
>
  default
</span>
`;

exports[`Badge information 1`] = `
<span
  className="css-19f16re"
>
  information
</span>
`;

exports[`Badge success 1`] = `
<span
  className="css-1j3h1kw"
>
  success
</span>
`;

exports[`Badge warning 1`] = `
<span
  className="css-wz5vwa"
>
  warning
</span>
`;
